testsuite/tests/overloadedrecflds/should_fail/overloadedrecfldsfail04.stderr
[1 of 2] Compiling OverloadedRecFldsFail04_A ( OverloadedRecFldsFail04_A.hs, OverloadedRecFldsFail04_A.o )
[2 of 2] Compiling Main             ( overloadedrecfldsfail04.hs, overloadedrecfldsfail04.o )

overloadedrecfldsfail04.hs:9:6: error:
    Ambiguous field selector occurence: I.x
